--- a/frontend/FE/src/index.css
+++ b/frontend/FE/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 @layer base {
   @property --pos-x {
     syntax: '<percentage>';
@@ -202,4 +202,4 @@
     --border-color-1: hsla(320, 75%, 90%, 0.2);
     --border-color-2: hsla(320, 50%, 90%, 0.75);
   }
-}
+} */
